# retry-policies

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
src/: lib.rs  retry_policy.rs
src/policies/: exponential_backoff.rs  mod.rs
